# AdventOfCode

./: .gitignore  CMakeLists.txt  README.md  main.cpp
01-Trebuchet/: Trebuchet.cpp  TrebuchetTest.cpp
02-CubeConundrum/: CubeConundrum.cpp  CubeConundrum.h  CubeConundrumTest.cpp
aoc23/02-CubeConundrum/: CubeConundrumTest.h
aoc23/cpp/01-Trebuchet/: TrebuchetTest.cpp  TrebuchetTest.h
aoc24/: CMakeLists.txt  TestHelper.cpp  TestHelper.h  main.cpp
aoc24/01-HistorianHysteria/: HistorianHysteria.h  HistorianHysteriaPart1.cpp  Trebuchet.cpp  Trebuchet.h
aoc24/01-HistorianHysteria/Solution/: HistorianHysteria.h  HistorianHysteriaPart1.cpp  HistorianHysteriaPart2.cpp
aoc24/01-HistorianHysteria/Test/: HistorianHysteriaTest.cpp
aoc24/01_historian_hysteria/test/: HistorianHysteriaTest.cpp
aoc24/02_red_nosed_reports/: RedNosedReports.h  RedNosedReportsPart1.cpp  RedNosedReportsPart2.cpp
aoc24/02_red_nosed_reports/test/: RedNosedReportsTest.cpp
aoc24/03_mull_it_over/: MullItOver.h  MullItOverPart1.cpp  MullItOverPart2.cpp
aoc24/03_mull_it_over/test/: MullItOverTest.cpp
aoc24/cpp/: .editorconfig  .gitignore  CMakeLists.txt
aoc24/cpp/01_historian_hysteria/: HistorianHysteriaPart2.cpp
aoc24/cpp/03_mull_it_over/: MullItOver.h  MullItOverPart2.cpp
aoc24/cpp/05_print_queue/: PrintQueue.cpp  PrintQueue.h
aoc24/cpp/05_print_queue/test/: PrintQueueTest.cpp
aoc24/cpp/06_guard_gallivant/: GuardGallivant.cpp  GuardGallivant.h
aoc24/cpp/06_guard_gallivant/test/: GuardGallivantTest.cpp
aoc24/cpp/07_bridge_repair/: BridgeRepair.cpp  BridgeRepair.h
aoc24/cpp/07_bridge_repair/test/: BridgeRepairTest.cpp
aoc24/cpp/08_resonant_collinearity/: ResonantCollinearity.cpp  ResonantCollinearity.h
aoc24/cpp/08_resonant_collinearity/test/: ResonantCollinearityTest.cpp
aoc24/cpp/09_disk_fragmenter/: DiskFragmenter.cpp  DiskFragmenter.h
aoc24/cpp/09_disk_fragmenter/test/: DiskFragmenterTest.cpp
aoc24/cpp/10_hoof_it/: HoofIt.cpp  HoofIt.h
aoc24/cpp/10_hoof_it/test/: HoofItTest.cpp
aoc24/cpp/11_plutonian_pebbles/: PlutonianPebbles.cpp  PlutonianPebbles.h
aoc24/cpp/11_plutonian_pebbles/test/: PlutonianPebblesTest.cpp
aoc24/cpp/util/: TestHelper.cpp  TestHelper.h
aoc24/info/06_guard_gallivant/problem/: guard_gallivant_part1.txt
aoc24/info/07_bridge_repair/problem/: bridge_repair_part1.txt
aoc24/info/08_resonant_collinearity/input/: resonant_collinearity_part1_minsley.txt
aoc24/info/09_disk_fragmenter/input/: disk_fragmenter_part1_minsley.txt
aoc24/info/09_disk_fragmenter/problem/: disk_fragmenter_part1.txt  disk_fragmenter_part2.txt
aoc24/info/10_hoof_it/input/: hoof_it_part1_minsley.txt
aoc24/info/11_plutonian_pebbles/input/: plutonian_pebbles_part1_minsley.txt
aoc24/info/12_garden_groups/input/: garden_groups_input1_minsley.txt
aoc24/info/12_garden_groups/problem/: garden_groups_part1.txt
aoc24/rust/: Cargo.toml
aoc24/rust/src/: ceres_search.rs  day02_red_nosed_reports.rs  day04_ceres_search.rs  day05_print_queue.rs  historian_hysteria.rs  lib.rs
aoc24/rust/tests/: day01_historian_hysteria_tests.rs  day02_red_nosed_reports_tests.rs  day04_ceres_search_tests.rs  day05_print_queue_tests.rs  integration_tests.rs
aoc24/util/: TestHelper.cpp
